# kekov_soundboard_v2

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml
backend_api/: Cargo.toml  README.md  config.json.example  sqlx-data.json
backend_api/db_tests/: database.sql
backend_api/migrations/: 20220325195015_auth_tokens.sql  20220326103144_state_not_null.sql  20220331095808_users.sql  20220401161032_files.sql  20220405214143_guild.sql  20220405214903_users_guilds.sql  20220408121932_guild_file.sql  20220524092855_modify_file_deletion.sql  20220530100320_timestamp_files.sql  20220530102008_guild_file_is_deleted.sql  20220530102025_remove_unused_users_guilds.sql  20220630101805_guild_active.sql  20220630102844_guild_active_not_null.sql  20220706095252_display_name_index.sql
backend_api/src/: active_guilds_check.rs  discord_client_config.rs  main.rs  oauth_client.rs  scheduler.rs
backend_api/src/config/: mod.rs
backend_api/src/database/: mod.rs  postgres_db.rs
backend_api/src/env/: mod.rs
backend_api/src/error/: errors.rs
backend_api/src/middleware/: auth_middleware.rs  mod.rs  user_guilds_middleware.rs
backend_api/src/models/: discord_user.rs  guild.rs  guild_file.rs  ids.rs  mod.rs  sound_file.rs  state.rs  user.rs
backend_api/src/routes/: auth.rs  controls.rs  file.rs  guild.rs  mod.rs  not_found.rs  status.rs  user.rs  ws.rs
backend_api/src/utils/: auth.rs  cache.rs  mod.rs  permissions.rs  validation.rs
backend_api/src/ws/: channels_client.rs  channels_server.rs  mod.rs  ws_server.rs  ws_session.rs  ws_sync.rs
discord_bot/: Program.cs  README.md  discord_bot.csproj
discord_bot/Controls/: Controls.cs  LavalinkGuildConnectionExt.cs  PlayControl.cs  PlayQueue.cs  Sound.cs
discord_bot/DiscordBot/: DiscordBot.cs  (+1 more)
website/: package-lock.json  package.json
(+70 files in other folders)
