[package]
name = "backend_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web-actors = "4.1.0"
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-http = "3.0.4"
actix-multipart = "0.4.0"
actix-cors = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# actix-web = "4.0.0-beta.21"
# actix-identity = "0.4.0-beta.8"
# rand = "0.8"
oauth2 = "4.1"
thiserror = "1.0.30"
rustls = "0.20.4"
# webpki-roots = "0.22.2"
rustls-pemfile = "0.3.0"
awc = { version = "3.0.0", features = ["rustls"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
# actix-session = "0.5.0-beta.8"
log = { version = "0.4.14", features = ["std", "release_max_level_trace"] }
# log = { version = "0.4.14", features = ["release_max_level_info"] }
# actix-identity = "0.4.0-beta.9"
futures-util = "0.3.21"
futures = "0.3.21"
# anyhow = "1.0"
uuid = { version = "0.8.2", features = ["v4"] }
rs-snowflake = "*"
lazy_static = "1.4.0"
mime = "0.3"
infer = "0.7.0"

# TODO: change runtime back to rustls
# sqlx = { version = "0.5", features = ["runtime-actix-rustls", "postgres", "chrono", "offline", "macros", "migrate"] }
sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "postgres", "chrono", "offline", "macros", "migrate"] }
chrono = "0.4"
deadpool = "0.9.3"
async-trait = "0.1.53"
actix-codec = "0.5.0"
tokio = { version = "1.17.0", features = ["sync", "time"] }
tokio-stream = "0.1.9"
moka = { version = "0.8.2", features = ["future"] }
serde_urlencoded = "0.7.1"
reqwest = { version = "0.11.11", features = ["json"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
